--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -31,6 +31,7 @@
 html, body {
 	font-family: 'canada-type-gibson', sans-serif;
 	color: $gray-100;
+	font-size: 100%;
 }
 h1, h2, h3 {
 	margin: 0px;
